--- a/Top up Web/login.css
+++ b/Top up Web/login.css
@@ -5,16 +5,19 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f3f3f3;
+    /* background-color: #f3f3f3; */
+    background: url("./Gojo.jpeg");
+    background-repeat: no-repeat;
+    background-size: 100%;
     margin: 0;
     padding: 0;
 }
 
 .container {
-    width: 300px;
+    width: 290px;
     margin: 100px auto;
     background: #fff;
-    padding: 20px;
+    padding: 30px 40px 40px 30px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.341);
     border-radius: 5px;
 }
@@ -45,10 +48,11 @@ label:hover {
 input[type="text"],
 input[type="password"] {
     width: 100%;
-    padding: 5px 0;
+    padding: 4px ;
     margin-bottom: 10px;
     border: 2px solid #ccc;
     border-radius: 6px;
+    margin:  5px;
 }
 
 input[type="checkbox"] {
@@ -76,7 +80,7 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-    background: rgba(50, 96, 234, 0.981);
+    background: black;
     transition: 1s linear;
     rotate: 135deg;
 }
