--- a/Simple Website/wan.css
+++ b/Simple Website/wan.css
@@ -33,3 +33,37 @@ body {
         font-size: 1em;
     }
     
+article {
+    width: 400px;
+    height: 400px;
+    text-align: center;
+    padding-bottom: 40px;
+    border: 1px;
+    border-radius: 5px;
+    border-style: solid;
+    box-shadow: 60px;
+    position: relative;
+    /* hsl = warna / hue , kepudaran %, kecerahan % */
+    color: hsl(213, 80%, 73%);
+    /* linear gradient dengar 3 color 90deg untuk menyamping */
+    background: linear-gradient(90deg,
+     rgba(5, 89, 225, 0.023) 0%,  
+     rgba(1, 3, 2, 0.52)50%),
+     rgb(13, 80, 236)12%;
+}
+h2{
+
+    font-family: 'Courier',monospace;
+    text-decoration: dashed;
+    text-shadow: 20px;
+    border: 3px;
+    border-radius: 50px;
+    border-style: double;
+    border-color: rgba(30, 7, 241, 0.935);
+}
+img {
+    width: 82%;
+    border-radius: 10cm;
+    border: 1px;
+    border-style: dashed;
+}
