--- a/Simple Website/wan.css
+++ b/Simple Website/wan.css
@@ -51,6 +51,23 @@ article {
      rgba(1, 3, 2, 0.52)50%),
      rgb(13, 80, 236)12%;
 }
+
+nav {
+    color: white;
+    display: inline-block;
+    border: 2px;
+    border-style: solid;
+
+
+}
+.ig{
+    display:inline-block;
+    background-color: white;
+    border: 1px;
+    box-sizing: content-box;
+    border-style: solid;
+    padding: 20px 20px 0 20px;
+}
 h2{
 
     font-family: 'Courier',monospace;
@@ -67,4 +84,26 @@ img {
     border: 1px;
     border-style: solid;
     border-top-style: dashed;
+}
+
+button:disabled {
+    background-color: grey;
+    border-color: green;
+    cursor: not-allowed;
+    padding: 10px 20px;
+    color: black;
+}
+button:enabled {
+    background: blue;
+    border-color: aqua;
+    color: white;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+button:enabled:active {
+    transform: scale(1.5);
+}
+
+:checked{
+    box-shadow: 0 0 1px 1px rgb(0, 217, 255);
 }
